--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,6 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap/dist/css/bootstrap.min.css";
+ @import "@fortawesome/fontawesome-free/css/all";
+ @import "sb-admin-2";
