--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <ul class="navbar-nav ml-auto">
-  <%= render "layouts/search" %>
+  <%#= render "layouts/search" %>
   <%= render "layouts/alerts" %>
   <%#= render "layouts/messages" %>
   <div class="topbar-divider d-none d-sm-block"></div>
