--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
-<h1 class="h3 mb-4 text-gray-800">
-  Welcome in reCognizer!
-</h1>
+<%= javascript_pack_tag 'main' %>
+<div id='main-container'>
+  <h1 class="h3 mb-4 text-gray-800">
+    Welcome in reCognizeR
+  </h1>
+  <app></app>
+</div>
