Add uploading form

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,5 @@
   <h1 class="h3 mb-4 text-gray-800">
     Welcome in reCognizeR
   </h1>
-  <app></app>
+  <app><router-view></router-view></app>
 </div>
