--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -46,7 +46,7 @@
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Items:</h6>
           <a class="collapse-item" href="buttons.html">Users</a>
-          <a class="collapse-item" href="cards.html">Pipelines</a>
+          <a class="collapse-item" href="/#/pipeline-list">Pipelines</a>
         </div>
   </div>
 </li>
