--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,18 +1,18 @@
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-  <%= link_to root_url, class: "sidebar-brand d-flex align-items-center justify-content-center" do %>
+<ul class="text-white navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+  <a class= "sidebar-brand d-flex align-items-center justify-content-center">
     <div class="sidebar-brand-icon rotate-n-15">
       <i class="fas fa-laugh-wink"></i>
     </div>
     <div class="sidebar-brand-text mx-3">re-Cognizer</div>
-  <% end %>
+  </a>
 
   <hr class="sidebar-divider my-0">
 
   <li class="nav-item">
-    <%= link_to root_url, class: "nav-link" do %>
+    <a class= "nav-link">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Dashboard</span>
-    <% end %>
+    </a>
   </li>
 
   <hr class="sidebar-divider">
@@ -25,9 +25,10 @@
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Utilities:</h6>
+            <h6 class="collapse-header">Cases & Uploads:</h6>
             <a class="collapse-item" href="/#/uploader">New Upload</a>
-            <a class="collapse-item" href="utilities-color.html">Cases</a>
+            <a class="collapse-item" href="/#/uploads">Uploads</a>
+            <a class="collapse-item" href="/#/cases">Cases</a>
           </div>
         </div>
       </li>
@@ -50,11 +51,4 @@
         </div>
   </div>
 </li>
-      
-
-  <hr class="sidebar-divider d-none d-md-block">
-  <div class="text-center d-none d-md-inline">
-    <button class="rounded-circle border-0" id="sidebarToggle"></button>
-  </div>
-
 </ul>
