--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,5 @@
  *= require_self
  */
  @import "bootstrap/dist/css/bootstrap.min.css";
- @import "@fortawesome/fontawesome-free/css/all";
+ @import 'font_awesome5_webfont';
  @import "sb-admin-2";
