--- a/app/views/medico_legal_cases/new.html.erb
+++ b/app/views/medico_legal_cases/new.html.erb
@@ -47,7 +47,7 @@ $(function(){
           let index = jsonResponse.attributes.files.indexOf(file)
           if (file.content_type.toString().match("image")) {
            window.items.push(file) 
-           let link = '<img width="160" height="160" data-id="'+ jsonResponse.id + '" src="'+ file.src + '" onclick="openGallery(0)"/>'
+           let link = '<img width="160" height="160" data-id="'+ jsonResponse.id + '" src="'+ file.src + '" onclick="initGalleryWithOpen(window.items, 0)"/>'
            $("div#slides").append(link)
           }
           if (file.content_type.toString().match("text")) {
@@ -110,4 +110,9 @@ function initGallery(items, index ) {
   var options = { index: 0}
   //openGallery(index)
 }
+
+ function initGalleryWithOpen(items, index) {
+    initGallery(items, index)
+    openGallery(index)
+  }
 </script>
