--- a/app/views/medico_legal_cases/new.html.erb
+++ b/app/views/medico_legal_cases/new.html.erb
@@ -43,18 +43,15 @@ $(function(){
     keepOrder: true,
     afterSelect: function(value){
       $.get(`/processing_results/${value}`).done(function(jsonResponse){
-        jsonResponse.attributes.files.forEach((file) => {
-          let index = jsonResponse.attributes.files.indexOf(file)
-          if (file.content_type.toString().match("image")) {
-           window.items.push(file) 
-           let link = '<img width="160" height="160" data-id="'+ jsonResponse.id + '" src="'+ file.src + '" onclick="initGalleryWithOpen(window.items, 0)"/>'
+        console.log(jsonResponse)
+          if (jsonResponse.attributes.content_type.toString().match("image")) {
+           let link = '<img width="160" height="160" data-id="'+ jsonResponse.id + '" src="'+ jsonResponse.attributes.src + '" onclick="initGalleryWithOpen(window.items, 0)"/>'
            $("div#slides").append(link)
           }
-          if (file.content_type.toString().match("text")) {
-           let link = '<a href="'+ file.src +'.txt " data-id="'+ jsonResponse.id + '" src="'+ file.src  + '.txt">'+ file.filename.replace("png", "txt") + '</a>'
+          if (jsonResponse.attributes.content_type.toString().match("text")) {
+           let link = '<a href="'+ jsonResponse.attributes.src +'.txt " data-id="'+ jsonResponse.id + '" src="'+ jsonResponse.attributes.src  + '.txt">'+ jsonResponse.attributes.filename.replace("png", "txt") + '</a>'
            $("div#slides").append(link)
           }
-        });
         let dateHtml = $("div#dates").html();
         jsonResponse.attributes.dates.sort(function(a, b) {
           var dateA = new Date(a), dateB = new Date(b);
