--- a/app/views/uploaded_files/_uploaded_files.html.erb
+++ b/app/views/uploaded_files/_uploaded_files.html.erb
@@ -6,6 +6,7 @@
         <%= render "uploaded_files/item", item: item %>
       <% end %>
     </div>
+  </div>
 </div>
 <script type='text/javascript'>
   $(function(){
